[gd_scene load_steps=10 format=3 uid="uid://cub5nhn1ah68w"]

[ext_resource type="Script" path="res://rooms/combat_challenge_room.gd" id="1_script"]
[ext_resource type="PackedScene" path="res://rooms/spawn_point.tscn" id="2_spawn_point"]
[ext_resource type="PackedScene" uid="uid://bepujd34sp2i1" path="res://player/player.tscn" id="3_ml41b"]

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(43.25, 657.75)

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(1280, 40)

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(200, 40)

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(3662, 100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_icil6"]
size = Vector2(150, 663.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_huo6n"]
size = Vector2(148.5, 660.5)

[node name="CombatChallengeRoom" type="Node2D"]
script = ExtResource("1_script")

[node name="TriggerArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerArea"]
position = Vector2(120, 375)
shape = SubResource("3")

[node name="Platforms" type="Node2D" parent="."]

[node name="Ground" type="StaticBody2D" parent="Platforms"]
position = Vector2(640, 680)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/Ground"]
shape = SubResource("1")

[node name="ColorRect" type="ColorRect" parent="Platforms/Ground"]
offset_left = -640.0
offset_top = -20.0
offset_right = 640.0
offset_bottom = 20.0
color = Color(0.2, 0.2, 0.2, 1)

[node name="Platform1" type="StaticBody2D" parent="Platforms"]
position = Vector2(200, 500)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/Platform1"]
shape = SubResource("2")

[node name="ColorRect" type="ColorRect" parent="Platforms/Platform1"]
offset_left = -100.0
offset_top = -20.0
offset_right = 100.0
offset_bottom = 20.0
color = Color(0.2, 0.2, 0.2, 1)

[node name="Platform2" type="StaticBody2D" parent="Platforms"]
position = Vector2(1080, 500)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/Platform2"]
shape = SubResource("2")

[node name="ColorRect" type="ColorRect" parent="Platforms/Platform2"]
offset_left = -100.0
offset_top = -20.0
offset_right = 100.0
offset_bottom = 20.0
color = Color(0.2, 0.2, 0.2, 1)

[node name="Platform3" type="StaticBody2D" parent="Platforms"]
position = Vector2(640, 400)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/Platform3"]
shape = SubResource("2")

[node name="ColorRect" type="ColorRect" parent="Platforms/Platform3"]
offset_left = -100.0
offset_top = -20.0
offset_right = 100.0
offset_bottom = 20.0
color = Color(0.2, 0.2, 0.2, 1)

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="SpawnPoint1" parent="SpawnPoints" instance=ExtResource("2_spawn_point")]
position = Vector2(200, 450)

[node name="SpawnPoint2" parent="SpawnPoints" instance=ExtResource("2_spawn_point")]
position = Vector2(1080, 450)

[node name="SpawnPoint3" parent="SpawnPoints" instance=ExtResource("2_spawn_point")]
position = Vector2(640, 350)

[node name="SpawnPoint4" parent="SpawnPoints" instance=ExtResource("2_spawn_point")]
position = Vector2(400, 630)

[node name="SpawnPoint5" parent="SpawnPoints" instance=ExtResource("2_spawn_point")]
position = Vector2(880, 630)

[node name="Positions" type="Node2D" parent="."]

[node name="EntrancePosition" type="Marker2D" parent="Positions"]
position = Vector2(59, 612)

[node name="ExitPosition" type="Marker2D" parent="Positions"]
position = Vector2(1265, 604)

[node name="ExitArea" type="Area2D" parent="Positions/ExitPosition"]
position = Vector2(63, -1)
collision_layer = 0
collision_mask = 2
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Positions/ExitPosition/ExitArea"]
position = Vector2(-19, -232)
shape = SubResource("3")

[node name="KillZone" type="Area2D" parent="."]
position = Vector2(640, 800)
collision_layer = 0
collision_mask = 38

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone"]
position = Vector2(4, 0)
shape = SubResource("4")

[node name="Player" parent="." instance=ExtResource("3_ml41b")]
position = Vector2(31, 631)

[node name="Barriers" type="Node" parent="."]

[node name="LeftBarrier" type="StaticBody2D" parent="Barriers"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barriers/LeftBarrier"]
position = Vector2(-75, 331.75)
shape = SubResource("RectangleShape2D_icil6")

[node name="RightBarrier" type="StaticBody2D" parent="Barriers"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barriers/RightBarrier"]
position = Vector2(1342, 330.25)
shape = SubResource("RectangleShape2D_huo6n")
